Completed test cases