@@ -2,10 +2,6 @@ package com.src.TextScraper.Business;
 
 import java.io.UnsupportedEncodingException;
 import java.net.MalformedURLException;
-import java.net.URL;
-import java.net.URLEncoder;
-
-import org.apache.commons.httpclient.URI;
 import org.apache.commons.httpclient.URIException;
 
 public class Main {
@@ -18,11 +14,16 @@ public class Main {
 //		URLBuilder.append("products~PG-" + "1" + "?CLT=SCH&KW=");
 //		URLBuilder.append(s);
 //		System.out.println(URLBuilder);
-		String urlStr = "http://www.shopping.com/digital cameras/Digital Cameras/products~PG-1?KW=Digital Cameras";
-		URL url = new URL(urlStr);
-		URI uri = new URI(url.getProtocol(), url.getUserInfo(), url.getHost(), url.getPort(), url.getPath(), url.getQuery(), url.getRef());
-		String encodedSearchKeyword = URLEncoder.encode("assdsdsdad#$%!@", "UTF-8");
-		System.out.println(uri.toString());
+//		String urlStr = "http://www.shopping.com/digital cameras/Digital Cameras/products~PG-1?KW=Digital Cameras";
+//		URL url = new URL(urlStr);
+//		URI uri = new URI(url.getProtocol(), url.getUserInfo(), url.getHost(), url.getPort(), url.getPath(), url.getQuery(), url.getRef());
+//		String encodedSearchKeyword = URLEncoder.encode("assdsdsdad#$%!@", "UTF-8");
+//		System.out.println(uri.toString());
+		
+		String s = "1,000";
+		s = s.replace(",","");
+		System.out.println(s);
+		
 	}
 	
 }
